feat: 성장 단계와 확률적 다음 형태 결정 추가
성장도가 상한에 닿아도 곧바로 성체가 되지 않을 수 있게 한다. 최대
성장 단계는 config.yml 의 growth.max-stage 로 설정한다 (기본값 1 —
성장도가 차면 바로 성체가 되는 예전 동작과 동일, 하위 호환).

- PetData.growthStage: 1부터 시작하는 카운터. YamlPetRepository 가
  growth-stage 로 읽고 쓴다 (없으면 1로 폴백해 기존 파일과 호환).
- PetType.evolvesInto(단일 고정) 를 nextStage(가중치 맵)로 교체.
  pets/*.yml 의 next-stage: 섹션에서 읽는다. 비어 있으면 다음 단계에서도
  같은 종류를 유지한다.
- GrowthService.promoteIfGrown 이 boolean 대신 StageResult
  (NONE/STAGE_UP/GREW_UP) 를 돌린다. growthStage 가 max-stage 에
  못 미쳤으면 next-stage 가중치로 다음 형태를 추첨하고, growthStage 를
  올리고, 성장도를 0부터 다시 채운다. max-stage 에 이르러야 성체가
  되고 그 뒤로는 더 자라지 않는다.
- 알의 랜덤 뽑기와 성장 단계의 다음 형태 결정이 같은 가중치 추첨
  알고리즘을 쓴다. Weighted.pick 으로 뽑아 공유하고, EggDefinition.roll
  이 그걸 위임하도록 정리했다.
- 이제 쓰이지 않게 된 PetService.evolve()(단일 고정 진화, 호출부 없던
  죽은 코드) 를 제거했다.

버그 하나를 잡았다: EggDefinition.weights 와 PetType.nextStage 가
Map.copyOf 로 저장되고 있었는데, Map.copyOf 는 JVM 마다 반복 순서를
랜덤한 솔트로 흩는다. Weighted.pick 은 순서에 따라 확률 구간을
나누므로, 순서가 흔들리면 같은 설정에서도 실행마다 다른 결과가 나올
수 있었다 — 실제로 EggDefinitionTest 가 이번에 그렇게 깨졌다. 두 곳
모두 LinkedHashMap 으로 감싸 설정 파일에 적은 순서를 보존하도록
고쳤다. WeightedTest 에 재현 테스트를 남기고 3회 반복 실행으로
안정성을 확인했다.

테스트 47개 통과 (WeightedTest 신설, PetDataTest 에 growthStage
케이스 추가).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01NE2Ed9bcHzMnm1rQpBQv11